--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -33,7 +34,6 @@ logs/
 
 # Virtual environment
 venv/
-.venv/
 ENV/
 
 # IDE files
