--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask==2.0.1
-crawl4ai==0.5.0.post8
+werkzeug<2.3
+crawl4ai==0.5.0.post4
 requests>=2.31.0
 beautifulsoup4>=4.12.0
+polars==1.26.0
 schedule==1.2.0
 python-dotenv>=1.0.0
 pandas==2.0.3
@@ -9,3 +11,6 @@ apscheduler==3.10.1
 tqdm==4.62.3
 PyPDF2>=3.0.0
 google-generativeai>=0.3.2 
+gunicorn==21.2.0
+selenium==4.31.0
+webdriver-manager==4.0.2
