--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,10 @@ jobs:
       - name: Install dev tools
         run: |
           python -m pip install --upgrade pip
-          pip install isort black flake8
+          pip install isort black
 
       - name: isort check
         run: isort . --check-only
 
       - name: black check
         run: black . --check
-
-      - name: flake8
-        run: flake8 .
