--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,25 @@
 # .github/workflows/ci.yml
-name: CI (lint, isort, black, flake8)
+name: CI (lint, isort, black)
 on:
   pull_request:
     branches: [ main ]
 
 jobs:
-  lint-and-format:
+  pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install dev tools
+      - name: Install pre-commit
         run: |
           python -m pip install --upgrade pip
-          pip install isort black
+          pip install pre-commit
 
-      - name: isort check
-        run: isort . --check-only
-
-      - name: black check
-        run: black . --check
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files
