--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
-# .github/workflows/deploy.yml
-name: Build & Deploy to Cloud Run
+name: Deploy to Cloud Run
+
 on:
   push:
     branches: [ main ]
@@ -7,30 +7,45 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. Check out your code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build & push Docker image
-        uses: docker/build-push-action@v3
+      # 2. Authenticate to GCP
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
         with:
-          context: .
-          push: true
-          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/board-paper-scraper:latest
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up GCP credentials
+      # 3. (Optional) Set up gcloud CLI
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
+      # 4. Configure Docker so it can push to gcr.io
+      - name: Configure Docker credentials
+        run: |
+          gcloud auth configure-docker --quiet
+
+      # 5. Build & push the Docker image
+      - name: Build & push Docker image
+        run: |
+          docker build \
+            --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/board-paper-scraper:latest \
+            .
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/board-paper-scraper:latest
+
+      # 6. Deploy the image to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy board-paper-scraper \
-            --image=gcr.io/${{ secrets.GCP_PROJECT_ID }}/board-paper-scraper:latest \
-            --region=europe-west1 \
-            --platform=managed \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/board-paper-scraper:latest \
+            --region europe-west1 \
+            --platform managed \
             --memory=2Gi \
             --timeout=600s \
             --allow-unauthenticated
